--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
+    
+    iiii
     <!-- built files will be auto injected -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   </body>
